Finished primer notes

--- a/0.Notes/0.1.General.md
+++ b/0.Notes/0.1.General.md
@@ -21,3 +21,7 @@ When you find problems, think about why.
 Try to write correct, simple, efficient, readable and maintanable code.
 
 Don't be afraid to use data structures and reuse code. Always look for where you can make code more modular.
+
+Code must be flexible & robust - try to write for a more general case where possible.
+
+Don't make assumptions about input - error check.
