Added notes on linked lists

--- a/0.Notes/0.3.LinkedLists.md
+++ b/0.Notes/0.3.LinkedLists.md
@@ -3,3 +3,7 @@
 Linked lists are popular topics for questions, the have linear O(n) time to access elements and often involve recursive solutions.
 
 Linked lists can be singly- or doubly-linked.
+
+The **Runner** technique can be used for a variety of problems, such as interleaving two lists - one pointer advances two nodes for each one of the other, thus reaching the end of the list when the first pointer is in the middle. Then the second pointer can be reset and used to interleave the values of the second half of the list with the first half.
+
+Lots of problems have simple recursive solutions, though these have O(n) solution time.
