Added FindKthElement solution ex 2.2

--- a/0.Notes/0.1.General.md
+++ b/0.Notes/0.1.General.md
@@ -25,3 +25,8 @@ Don't be afraid to use data structures and reuse code. Always look for where you
 Code must be flexible & robust - try to write for a more general case where possible.
 
 Don't make assumptions about input - error check.
+
+## Good questions
+
+* For string based questions, **is the character set in Ascii (256 chars) or Unicode (100,000 chars)
+* For string based questions, it is often helpful to work backwards from the end of the string
