Added notes & gist for trees & graphs

--- a/0.Notes/0.5.TreesAndGraphs.md
+++ b/0.Notes/0.5.TreesAndGraphs.md
@@ -6,4 +6,34 @@ It is important to discuss problems to clarify the question.
 
 * Binary Tree vs. Binary Search Tree - A BST is ordered with every left node smaller than the right node
 * Balanced vs. Unbalanced - balanced doesn't mean the tree is equal, only that the trees vary by a certain amount. Unbalanced requires explanation of the algorithm in best and average time.
-* Full & complete - 
+* Full & complete - a tree is full and complete when all the leaves are at the bottom and every non-leaf node has two children.
+
+## Binary tree traversal
+
+You can traverse a tree. BFS with a queue or DFS with a stack.
+
+* in-order - for all nodes, recursively visit left, current, right
+* post-order - for all nodes, recursively visit the current, left then right nodes
+* pre-order - for all nodes, recursively visit the right, left, current.
+
+## Trie (retrieval) structure
+
+A variant of the n-ary tree with characters stored at each node so you can build words from the paths.
+
+## Graph traversal
+
+This can be harder than btree traversal. There are two main methods:
+
+### Depth first Search
+
+Great to visit every node in the graph, for search operations.
+
+For a node n, we visit the node and it's adjacent nodes, before searching the next level of adjacent nodes.
+
+To prevent an infinite loop we must also check if the current node has been visited.
+
+### Breadth first search
+
+For larger trees, breadth first search can help search the root's closest ancestors first.
+
+We visit all the adjacent nodes before visiting their adjacent nodes. A queue is good for this. 
